# PeopleCounter

./: .gitignore  AMG8833_to_rapberryPi_connecter.py  CMakeLists.txt  Doxyfile  MLX90640_to_raspberryPi_connecter.py  README.md  config.json  harness_config.json  header_config.txt  make.sh  people_counter.h.in
data/: Cap_walking_code_H_11_05_18.json  Child_mimic_L_10_53_02.json  Entering_sideway_H_12_11_18.json  Hoodie_walking_O_11_05_53.json  Hot_plate_H_11_15_48.json  Hot_plate_further_H_11_16_21.json  Long_coat_L_11_09_26.json  Mug_boiling_water_L_11_19_23.json  No_People_26c_take1_10_38_40.json  One_People_Walking_26c_H_10_41_13.json  One_People_walking_O_10_42_54.json  Sprinting_O_11_03_52.json  Taking_a_phone_call_at_the_door_O_12_15_34.json  Taking_phone_call_at_the_door_L_12_17_29.json  Two_cup_hot_water_O_11_21_03.json  Two_people_oppsite_drect_change_idea_26c_O_J_13_53_32.json  Walking_halfway_over_the_door_O_12_13_01.json  Walking_with_phone_H_11_46_38.json  Walking_with_phone_L_11_44_34.json  Wheel_chair_mimic_H_11_22_10.json  test_again_12_07_29.json  test_door_close_11_47_39.json  test_hoodie_11_06_50.json
data/amg8833/: Boiling_water_bottle_O_11_18_32.json  Computer_one_person_walking_H_11_29_16.json  Computer_one_person_walking_L_11_27_37.json  Entering_sideway_O_12_10_39.json  Fast_walking_H_10_59_39.json  Fast_walking_L_10_58_41.json  Fast_walking_O_10_59_11.json  Height_below_average_one_person_walking_26_5_H_14_23_06.json  Height_below_average_one_person_wlking_26_5_14_22_16.json  Hoodie_walking_L_11_06_20.json  Long_test_video_take2_14_04_42.json  Long_testing_video_26c_13_57_26.json  No_people_25c_13_00_23.json  No_people_27c_11_30_05.json  One_People_walking_26c_L_10_41_55.json  Open_the_door_for_others_O_L_H_12_27_29.json  Open_the_door_for_others_same_direc_L_H_O_12_23_55.json  Parent_child_H_L_10_56_03.json  People_inline_different_height_O_L_J_H_26_5_14_24_28.json  Sprinting_H_11_04_15.json  Sprinting_L_11_03_32.json  Three_People_waking_in_line_L_O_H_10_47_41.json  Three_People_walking_in_line_H_L_O_10_51_18.json  Two_People_walking_26c_H_O_10_45_51.json  Two_People_walking_26c_O_L_10_44_52.json  Two_People_walking_opsite_O_H_12_20_13.json  Two_cup_hot_water_L_11_20_08.json  Two_people_oppsite_direct_L_O_12_19_05.json  Two_people_oppsite_direct_change_idea_26c_L_H_13_52_21.json  Two_people_walking_opsite_direc_L_H_12_21_10.json  Waling_halfway_L_12_12_33.json  Walking_halfway_open_the_door_H_12_14_07.json  Waving_hand_26c_H_13_54_56.json  Waving_hand_26c_H_13_55_17.json  Wheel_chair_with_person_mimic_H_O_11_22_37.json  Winter_coat_face_mask_cap_H_11_10_50.json  Winter_coat_walking_O_11_08_10.json  test_10_43_44.json  test_curtain_10_54_13.json
data/labels/horizontal/: Two_people_one_still_one_walking_12_08_32.json  Two_people_oposite_dir_12_09_46.json  Two_people_walking_side_by_side_25c_12_06_19.json
data/labels/vertical/: One_person_25c_09_33_49.json  One_person_25c_09_36_08.json  One_person_25c_09_37_00.json  One_person_25c_09_38_10.json  One_person_25c_09_39_05.json  One_person_changing_height_25c_09_50_32.json  One_person_door_close_25c_09_40_00.json  One_person_holding_mug_with_hot_water_25c_10_01_57.json  One_person_holding_mug_with_hot_water_25c_10_02_33.json  One_person_holding_mug_with_hot_water_25c_10_04_01.json  One_person_running_25c_09_54_05.json  One_person_running_25c_09_55_30.json  One_person_with_raincoat_with_cap_25c_09_43_02.json  One_person_with_raincoat_without_cap_25c_09_42_29.json  One_person_with_shirt_on_25c_09_41_35.json  One_person_with_thick_coat_and_cap_25c_09_47_49.json  One_person_with_thick_coat_with_cap_25c_09_46_45.json  One_person_with_thick_coat_without_cap_25c_09_45_59.json  One_standing_at_the_door_one_passing_by_25c_10_24_06.json
data/mlx90640/horizontal/: One_person_running_25c_12_05_40.json  One_person_walking_25c_12_05_09.json  Two_people_walking_side_by_side_25c_12_06_19.json  Two_people_walking_side_by_side_25c_12_07_07.json
data/mlx90640/horizontalVid/: onePerson_14_18_37.json  onePerson_14_19_01.json  twoPeople_14_26_10.json
data/mlx90640/three_people/: eeprom_11_37_15.json
data/mlx90640/vertical/: One_person_running_25c_09_54_05.json  One_person_running_25c_09_55_30.json  One_person_with_raincoat_with_cap_25c_09_43_02.json  One_person_with_raincoat_without_cap_25c_09_42_29.json  One_person_with_thick_coat_and_cap_25c_09_47_49.json  One_person_with_thick_coat_without_cap_25c_09_45_59.json  Three_people_2_in_1_out_11_36_31.json  Two_peoole_walking_side_by_side_one_with_shirt_25c_10_18_39.json  Two_people_opposite_directions_25c_10_42_30.json  Two_people_side_by_side_walking_25c_10_15_09.json  Two_people_walking_in_line_25c_10_44_52.json  Two_people_walking_opposite_direction_25c_10_43_13.json  Two_people_walking_side_by_side_25c_10_16_50.json  Two_people_walking_side_by_side_25c_10_17_44.json  Two_people_walking_side_by_side_one_change_his_mind_25c_10_40_45.json  Two_people_walking_side_by_side_one_with_thick_coat_another_with_shirt_25c_10_21_36.json  Two_people_walking_side_by_side_ont_with_thick_coat_25c_10_20_44.json
data/mlx90640/verticalVid/: OnePersonLaptop_14_09_57.json  onePersonArmsSwinging_14_09_36.json  onePerson_14_09_05.json
docs/: api.md  people_detection_research.md  people_tracking_research.md
docs/html/html/: annotated.html  annotated_dup.js  api.html  classes.html  detection_research.html  dir_23ec12649285f9fabf3a6b7380226c28.html  dir_23ec12649285f9fabf3a6b7380226c28.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6bc6ad22483805bbbda55258ad2a62ea.html  dir_6bc6ad22483805bbbda55258ad2a62ea.js  (+67 more)
mdata/: test_11_16_57.json
src/: README.md  people_counter.c  people_counter.cpp  people_counter.h
src/inc/: .people_counter.h.swp  people_counter.h
tools/: MLX90640_to_raspberryPi_connecter.py  README.md  adafruit_mlx90640.py  data_converter.c  test.py
tools/labeler/: MLX90640.py  data_labeler.py  raw_data_converter.py
util/: .testing_harness.cpp.swp  README.md  json.c  testing_harness.cpp
util/inc/: json.h  testing_harness.h
(+113 files in other folders)
